# Arcanum

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  Semana-1-Backend-FastAPI.md  app.py  build.sh  railway.json  railway.toml  render.dockerfile  render.yaml  requirements-render.txt  requirements.txt  start-all.ps1  start-backend.ps1  start-flutter.ps1  start-railway.sh  start.sh
arcanum-api/: .env.example  MIGRATION_SETUP.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test_migration_endpoint.py  test_supavisor_connection.py
arcanum-api/app/: __init__.py  main.py
arcanum-api/app/core/: config.py  exceptions.py  middleware.py  rate_limit.py  security.py
arcanum-api/app/db/: migrate.py  seed.py  session.py  supabase_ipv4_fix.py
arcanum-api/app/models/: __init__.py  divination_session.py  grimoire_entry.py  materia_item.py  natal_chart.py  oracle_conversation.py  refresh_token.py  tarot.py  tradition.py  user.py
arcanum-api/app/routers/: admin.py  astral.py  auth.py  grimoire.py  materia.py  oracle.py  tarot.py  users.py
arcanum-api/app/schemas/: divination_session.py  grimoire_entry.py  materia_item.py  natal_chart.py  oracle_conversation.py  refresh_token.py  tarot.py  tradition.py  user.py
arcanum-api/app/services/: auth_service.py  claude_service.py  lunar_calendar.py  tarot.py  (+6 more)
arcanum-api/migrations/: env.py  run_migrations.sh
arcanum-api/scripts/: seed_materia.py  seed_tarot.py
arcanum-api/tests/: conftest.py  test_astral.py  test_auth.py  test_calendar.py  test_natal.py  test_oracle.py  test_security.py  test_tarot.py
(+82 files in other folders)
