[tool.poetry]
name = "arcanum-api"
version = "0.1.0"
description = ""
authors = ["Samuel <noreply@anthropic.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = { version = "^0.29.0", extras = ["standard"] }
sqlalchemy = { version = "^2.0.0", extras = ["postgresql"] }
alembic = "^1.13.0"
pydantic = { version = "^2.6.0", extras = ["email"] }
pydantic-settings = "^2.2.0"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.0", extras = ["bcrypt"] }
python-multipart = "^0.0.9"
redis = "^5.0.0"
pytest = "^8.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"